--- a/src/main/resources/templates/fragments/loginProviders.html
+++ b/src/main/resources/templates/fragments/loginProviders.html
@@ -12,14 +12,14 @@
 <main role="main" class="container mt-3 mb-3">
     <div th:fragment="loginProviders" th:remove="tag">
         <div th:if="${delegatedAuthenticationProviderUrls}" id="list-providers"
-             th:class="${delegatedAuthenticationProviderDominant == null ? 'card d-sm-none d-md-block bg-light' : ''}">
-            
+             th:class="${delegatedAuthenticationProviderDominant == null ? 'card d-md-block bg-light' : ''}">
+
             <div class="card-body">
-		<!--
+                <!--
                 <h3 class="card-title" th:utext="#{screen.welcome.label.loginwith}" th:if="${delegatedAuthenticationProviderDominant == null}">Login with:</h3>
                 -->
-		 <h3 class="card-title">Login with:</h3>
-		<div class="card-title" th:if="${delegatedAuthenticationProviderDominant != null}">
+                 <h3 class="card-title">Login with:</h3>
+                <div class="card-title" th:if="${delegatedAuthenticationProviderDominant != null}">
                     <div class="alert alert-success" role="alert">
                         <span th:utext="#{screen.welcome.label.navto}" />
                     </div>
@@ -61,8 +61,8 @@
              th:class="${delegatedAuthenticationProviderDominant == null ? 'card d-sm-none d-md-block bg-light' : ''}">
 
             <div class="card-body">
-		    <!-- <h3 class="card-title" th:utext="#{screen.welcome.label.loginwith}" th:if="${delegatedAuthenticationProviderDominant == null}">Login with:</h3>-->
-		<h3 class="card-title">Login with:</h3>
+                    <!-- <h3 class="card-title" th:utext="#{screen.welcome.label.loginwith}" th:if="${delegatedAuthenticationProviderDominant == null}">Login with:</h3>-->
+                <h3 class="card-title">Login with:</h3>
                 <div class="card-title" th:if="${delegatedAuthenticationProviderDominant != null}">
                     <div class="alert alert-info">
                         <span th:utext="#{screen.welcome.label.navto}" />
