--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -16,6 +16,7 @@
     --teal: #20c997;
     --cyan: #17a2b8;
     --white: #fff;
+    --black: #000;
     --gray: #6c757d;
     --gray-dark: #343a40;
     --primary: #007bff;
@@ -64,11 +65,11 @@
   
   body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: "Merriweather", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: white;
+    color: black;
     text-align: center;
     background-color: #fff;
   }
