--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -370,14 +370,17 @@
   h1, h2, h3, h4, h5, h6,
   .h1, .h2, .h3, .h4, .h5, .h6 {
     margin-bottom: 0.5rem;
-    font-family: inherit;
+    font-family: "Ropa Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-weight: 500;
     line-height: 1.2;
     color: inherit;
   }
   
   h1, .h1 {
-    font-size: 2.5rem;
+    font-size: 2.7rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    line-height: 52px;
   }
   
   h2, .h2 {
