--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -402,7 +402,7 @@
   h6, .h6 {
     font-size: 1rem;
   }
-  
+
   .lead {
     font-size: 1.25rem;
     font-weight: 300;
@@ -10184,4 +10184,37 @@
   #insecureNotice.card {
     background-color: #ffc107;
     color: #212529;
+  }
+
+  .auth-provider-cards {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 16px 40px;
+  }
+
+  .auth-provider-card {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: 0px 64px;
+    padding: 16px;
+  }
+
+  .auth-provider-card .logo {
+    margin: 10px 0px;
+  }
+
+  .auth-provider-card a {
+    background-color: #00338D;
+    border-radius: 0.25rem;
+    color: white;
+    font-family: "Ropa Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 1.3125rem;
+    font-weight: 400;
+    line-height: 150%;
+    padding: 10px 18px;
+    margin: 10px;
   }
