--- a/src/main/resources/templates/casLoginView.html
+++ b/src/main/resources/templates/casLoginView.html
@@ -8,6 +8,9 @@
     <title th:text="#{cas.login.pagetitle}">CAS Acceptable Use Policy View</title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ropa+Sans:400">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
+
 </head>
 
 <body class="login">
