--- a/src/main/resources/templates/fragments/loginProviders.html
+++ b/src/main/resources/templates/fragments/loginProviders.html
@@ -11,6 +11,18 @@
 <body>
 <main role="main" class="container mt-3 mb-3">
     <div th:fragment="loginProviders" th:remove="tag">
+
+        <h1>MAAP Login</h1>
+        <p>You may login to MAAP using one of the user registration services below.</p>
+
+        <div th:if="${delegatedAuthenticationProviderUrls}" th:class="${delegatedAuthenticationProviderDominant == null ? 'auth-provider-cards d-md-flex' : ''}">
+
+            <th:block th:each="entry: ${delegatedAuthenticationProviderUrls}">
+                <div th:insert="~{fragments/authProviders :: __${entry.name.toUpperCase()}__ (${entry.redirectUrl},${entry.autoRedirect})}"></div>
+            </th:block>
+
+        </div>
+
         <div th:if="${delegatedAuthenticationProviderUrls}" id="list-providers"
              th:class="${delegatedAuthenticationProviderDominant == null ? 'card d-md-block bg-light' : ''}">
 
