Updated dimensional styling properties for auth-provider cards to improve layout.

--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -10202,6 +10202,8 @@
     display: flex;
     flex-direction: column;
     margin: 0px 64px;
+    margin: 24px 24px;
+    min-width: 350px;
     padding: 16px;
     transition: 0.15s;
   }
