Updated semantic markup for auth providers to reduce number of tags. Changed spacing CSS properties for auth provider cards. Also saved authProviders.html file that wasn't saved in pervious commits.

--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -10193,10 +10193,7 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 16px 40px;
-  }
-
-  .auth-provider-card-container {
-    margin: 24px 24px;
+    gap: 24px 24px;
   }
 
   .auth-provider-card {
