--- a/src/main/resources/templates/fragments/loginProviders.html
+++ b/src/main/resources/templates/fragments/loginProviders.html
@@ -18,7 +18,7 @@
         <div th:if="${delegatedAuthenticationProviderUrls}" th:class="${delegatedAuthenticationProviderDominant == null ? 'auth-provider-cards d-md-flex' : ''}">
 
             <th:block th:each="entry: ${delegatedAuthenticationProviderUrls}">
-                <div class="auth-provider-card-container" th:insert="~{fragments/authProviders :: __${entry.name.toUpperCase()}__ (${entry.redirectUrl},${entry.autoRedirect})}"></div>
+                <th:block th:insert="~{fragments/authProviders :: __${entry.name.toUpperCase()}__ (${entry.redirectUrl},${entry.autoRedirect})}"></div>
             </th:block>
 
         </div>
