--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -10188,10 +10188,15 @@
 
   .auth-provider-cards {
     align-items: flex-start;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+    -webkit-box-pack: center;
+       -ms-flex-pack: center;
+     justify-content: center;
     padding: 16px 40px;
     gap: 24px 24px;
   }
@@ -10200,10 +10205,13 @@
     align-items: center;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    margin: 0px 64px;
-    margin: 24px 24px;
+       -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+       -ms-flex-direction: column;
+           flex-direction: column;
     min-width: 350px;
     padding: 16px;
     transition: 0.15s;
