Added MAAP favicons and replaced MAAP logo used in site header. Removed older MAAP logo file.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,11 +12,11 @@
 
     <header th:fragment="header" role="banner">
         <div>
-            <a id="home-anchor" href="https://www.maap-project.org/"><img src="images/cropped-nasamaap2.png" style="padding: 15px 40px;float: left;" width="auto" height="90"></a>
+            <a id="home-anchor" href="https://www.maap-project.org/"><img src="images/nasamaaplogo3.png" style="padding: 15px 40px;float: left;" width="auto" height="90"></a>
         </div>
         <br>
        <!--     <div id="navigation-bar" style="text-align: left;">
-        <a href="https://www.maap-project.org/"><img src="images/cropped-nasamaap2.png" style="padding: 15px 40px;" width="auto" height="90"></a>
+        <a href="https://www.maap-project.org/"><img src="images/nasamaaplogo3.png" style="padding: 15px 40px;" width="auto" height="90"></a>
           <ul id="navigation-bar-menu" style="float: right; padding: 30px; display: inline-block; font-size: 24px; list-style-type: none; color: black;">
             <a href="https://www.maap-project.org/news/"><li style="display: inline; padding: 0 20px; color: black;">News</li></a>
             <li style="display: inline; border-left: 1px solid; padding: 0 20px;">Explore</li>
