--- a/src/main/resources/templates/casLoginView.html
+++ b/src/main/resources/templates/casLoginView.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
+    <link rel="icon" href="images/cropped-maapfavicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="images/cropped-maapfavicon-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="images/cropped-maapfavicon-180x180.png" />
+    <meta name="msapplication-TileImage" content="images/cropped-maapfavicon-270x270.png" />
+
     <title th:text="#{cas.login.pagetitle}">CAS Acceptable Use Policy View</title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ropa+Sans:400">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
-
 </head>
 
 <body class="login">
