Updated container max-width for smallest viewport size.

--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -567,6 +567,10 @@
   }
 
   @media (min-width: 0px) {
+    .container {
+      max-width: 400px;
+    }
+
     body > .container {
       padding-top: 80px !important;
     }
