Changed login text.

--- a/src/main/resources/templates/fragments/loginProviders.html
+++ b/src/main/resources/templates/fragments/loginProviders.html
@@ -13,7 +13,7 @@
     <div th:fragment="loginProviders" th:remove="tag">
 
         <h1>MAAP Login</h1>
-        <p>You may login to MAAP using one of the user registration services below.</p>
+        <p>You may login to MAAP using one of the services below.</p>
 
         <div th:if="${delegatedAuthenticationProviderUrls}" th:class="'auth-provider-cards d-md-flex'">
 
