--- a/src/main/resources/templates/casLoginView.html
+++ b/src/main/resources/templates/casLoginView.html
@@ -21,9 +21,8 @@
 <main role="main" class="container mt-3 mb-3">
     <div layout:fragment="content" class="row">
         <div id="notices" class="col-md mt-3 mt-md-0">
-            
-            <h1>MAAP Login</h1>
-            <p>You may login to MAAP using one of the services below.</p>
+
+            <h1>Login</h1>
 
             <div th:replace="fragments/insecure :: insecure"><a href="fragments/insecure.html">insecure alert goes
                 here</a></div>
