--- a/cas/src/main/resources/templates/fragments/loginProviders.html
+++ b/cas/src/main/resources/templates/fragments/loginProviders.html
@@ -15,7 +15,7 @@
         <div th:if="${delegatedAuthenticationProviderUrls}" th:class="'auth-provider-cards d-md-flex'">
 
             <th:block th:each="entry: ${delegatedAuthenticationProviderUrls}">
-                <th:block th:insert="~{fragments/authProviders :: __${entry.name.toUpperCase()}__ (${entry.redirectUrl},${entry.autoRedirect})}"></div>
+                <th:block th:insert="~{fragments/authProviders :: __${entry.name.toUpperCase()}__ (${entry.redirectUrl},${entry.autoRedirect})}"></th:block>
             </th:block>
 
         </div>
