Upgrade cas to v6.4.5

--- a/cas/src/main/resources/templates/fragments/authProviders.html
+++ b/cas/src/main/resources/templates/fragments/authProviders.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <body>
 
-        <th:block th:fragment="URS (loginUrl, autoRedirect)">
+        <th:block th:fragment="maapauth (loginUrl, autoRedirect)">
             <a th:href="@{${loginUrl}}" th:attr="autoredirect=${autoRedirect}" th:title="'Login with EarthData Account'" class="auth-provider-card">
                 <img src="images/urs-logo.png" th:alt-title="'EarthData Logo'" />
                 <span class="btn">Login with EarthData Account</span>
@@ -10,10 +10,17 @@
         </th:block>
 
 
-        <th:block th:fragment="ESA (loginUrl, autoRedirect)">
+        <th:block th:fragment="esa (loginUrl, autoRedirect)">
             <a th:href="@{${loginUrl}}" th:attr="autoredirect=${autoRedirect}" th:title="'Login with ESA Account'" class="auth-provider-card">
                 <img src="images/esa-logo.png" th:alt-title="'European Space Agency (ESA) Logo'" />
                 <span class="btn">Login with ESA Account</span>
+            </a>
+        </th:block>
+        
+        <th:block th:fragment="google (loginUrl, autoRedirect)">
+            <a th:href="@{${loginUrl}}" th:attr="autoredirect=${autoRedirect}" th:title="'Login with Google'" class="auth-provider-card">
+                
+                <span class="btn">Login with Google</span>
             </a>
         </th:block>
 
