Parameterize auth urls

--- a/cas/src/main/resources/templates/login/casLoginView.html
+++ b/cas/src/main/resources/templates/login/casLoginView.html
@@ -26,6 +26,7 @@
             <div th:replace="fragments/loginProviders :: loginProviders"><a href="fragments/loginProviders.html">loginProviders</a>
                 fragment
             </div>
+            <div th:replace="fragments/serviceui :: serviceUI"><a href="fragments/serviceui.html">service ui</a> fragment</div>
         </div>
     </div>
 </main>
